自动上传安装包到`hb_cli.env.uploadUrl`指定地址

--- a/server/index.html
+++ b/server/index.html
@@ -56,7 +56,7 @@
 		</div>
 	</div>
 	<div class="tips">
-		扫码二维码下载App，手机需与电脑在同一局域网
+		扫码二维码下载App，手机需与电脑在同一局域网，点击下方链接打开目录
 	</div>
 	<div class="path" id="path">
 
