本次全是广告

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -43,7 +43,7 @@
         max-width: 500px;
         margin: 20px auto 0;
       }
-      .path {
+      .btn {
         flex: 1;
         font-size: 14px;
         cursor: pointer;
@@ -57,6 +57,16 @@
         color: #000;
         text-decoration: none;
       }
+      .ad {
+        text-align: center;
+        padding-top: 50px;
+      }
+      .ad .ad_link{
+        text-decoration: none;
+        color: #ff4f22;
+        font-size: 14px;
+        margin: 5px;
+      }
     </style>
   </head>
 
@@ -69,8 +79,27 @@
       <div>手机需与电脑在同一局域网</div>
     </div>
     <div class="btns">
-      <div class="path" id="dir">打开文件所在目录</div>
-      <a class="path" href="/download"> 下载 </a>
+      <div class="btn" id="dir">打开文件所在目录</div>
+      <a class="btn" href="/download"> 下载 </a>
+    </div>
+    <div class="ad">
+      <div>
+        <a
+          class="ad_link"
+          href="https://www.aliyun.com/minisite/goods?userCode=jnyrjc6i"
+        >
+          【阿里云】你能得到75折优惠，而我能得到5%的佣金
+        </a>
+      </div>
+      <div>
+        <a
+          class="ad_link"
+          href="https://cloud.tencent.com/act/cps/redirect?redirect=1079&cps_key=9084b7493fb6e3826a5c26322c534cf7&from=console"
+        >
+          【腾讯云】轻量新用户上云福利，2核2G4M 低至 65元/年 ， 超大容量云硬盘
+          0.5折起！
+        </a>
+      </div>
     </div>
 
     <!-- <script src="./url.min.js"></script> -->
