--- a/server/static/index.html
+++ b/server/static/index.html
@@ -82,7 +82,7 @@
       <div class="btn" id="dir">打开文件所在目录</div>
       <a class="btn" href="/download"> 下载 </a>
     </div>
-    <div class="ad">
+    <!-- <div class="ad">
       <div>
         <a
           class="ad_link"
@@ -100,7 +100,7 @@
           0.5折起！
         </a>
       </div>
-    </div>
+    </div> -->
 
     <!-- <script src="./url.min.js"></script> -->
     <script src="qrcode.min.js"></script>
